--- a/droneio-cli/Dockerfile
+++ b/droneio-cli/Dockerfile
@@ -1,8 +1,7 @@
 FROM alpine:latest
 MAINTAINER sven.ruppert@gmail.com
-RUN mkdir drone
-WORKDIR drone
-RUN wget https://github.com/drone/drone-cli/releases/download/v0.8.0/drone_linux_amd64.tar.gz
+RUN apk add --no-cache wget
+RUN wget https://github.com/drone/drone-cli/releases/download/v0.8.1/drone_linux_amd64.tar.gz
 RUN tar -xzf drone_linux_amd64.tar.gz
 RUN install -t /usr/local/bin drone
-ENTRYPOINT ./bin/sh
+ENTRYPOINT /bin/sh
