--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SELENOID_DOCKER_EXTERNAL_IP=192.168.0.228
 DRONE_DOCKER_EXTERNAL_IP=192.168.0.228
+DRONE_DOCKER_SEC_TOKEN=yJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0ZXh0Ijoic3ZlbiIsInR5cGUiOiJ1c2VyIn0.Ho_kODjptP0sdbbQb8lc38Fb6oNqMjsLGEljgVmtSHI
 GIT_DOCKER_EXTERNAL_IP=192.168.0.228
