--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
-SELENOID_DOCKER_EXTERNAL_IP=192.168.0.228
-DRONE_DOCKER_EXTERNAL_IP=192.168.0.228
-DRONE_DOCKER_SEC_TOKEN=yJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0ZXh0Ijoic3ZlbiIsInR5cGUiOiJ1c2VyIn0.Ho_kODjptP0sdbbQb8lc38Fb6oNqMjsLGEljgVmtSHI
+NEXUS_VERSION=latest
+
+GOGS_VERSION=latest
 GIT_DOCKER_EXTERNAL_IP=192.168.0.228
+
+SELENOID_DOCKER_EXTERNAL_IP=192.168.0.228
+
+DRONE_VERSION=0.8
+DRONE_DOCKER_EXTERNAL_IP=192.168.0.228
+DRONE_DOCKER_SEC_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0ZXh0Ijoic3ZlbiIsInR5cGUiOiJ1c2VyIn0.0QrqMGqSCWgpeLDLMDuem8cK1hUNwFlORqaCjpfi79Q
