--- a/development/.env
+++ b/development/.env
@@ -1,9 +1,12 @@
+#DNS_DOCKER_BRIDGE_IP=192.168.65.1
+#DNS_DEFAULT_DNS_IP=192.168.0.1
+
 NEXUS_VERSION=latest
 
 GOGS_VERSION=latest
 GIT_DOCKER_EXTERNAL_IP=192.168.0.228
-
-SELENOID_DOCKER_EXTERNAL_IP=192.168.0.228
+#
+#SELENOID_DOCKER_EXTERNAL_IP=192.168.0.228
 
 DRONE_VERSION=0.8
 DRONE_DOCKER_EXTERNAL_IP=192.168.0.228
