--- a/development/.env
+++ b/development/.env
@@ -1,13 +1,19 @@
-#DNS_DOCKER_BRIDGE_IP=192.168.65.1
-#DNS_DEFAULT_DNS_IP=192.168.0.1
+COMPOSE_PROJECT_NAME=vaadin
+COMPOSE_API_VERSION=1.35
+DOCKER_API_VERSION=1.35
 
 NEXUS_VERSION=latest
 
-GOGS_VERSION=latest
+GIT_VERSION=latest
 GIT_DOCKER_EXTERNAL_IP=192.168.0.228
 #
 #SELENOID_DOCKER_EXTERNAL_IP=192.168.0.228
 
-DRONE_VERSION=0.8
+#DRONE_VERSION=0.8.2
+DRONE_VERSION=alpine
 DRONE_DOCKER_EXTERNAL_IP=192.168.0.228
 DRONE_DOCKER_SEC_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0ZXh0Ijoic3ZlbiIsInR5cGUiOiJ1c2VyIn0.0QrqMGqSCWgpeLDLMDuem8cK1hUNwFlORqaCjpfi79Q
+
+
+#SELENOID_VER=latest-release
+SELENOID_VER=1.4.3
