--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -2,16 +2,33 @@ version: '3.5'
 
 services:
 #EXPERIMENTAL unstable starts at 100
-  dns-proxy-server:
-    container_name: dns-proxy-server
-    hostname: dns-proxy-server
-    image: defreitas/dns-proxy-server
-    ports:
-      - 5380:5380
-    volumes:
-      - $PWD/dns-proxy-server/conf:/app/conf
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: always
+
+#  dns-server:
+#    container_name: dns-server
+#    hostname: dns-server
+#    image: sameersbn/bind:latest
+#    network_mode: bridge
+#    ports:
+#      - ${DNS_EXTERNAL_IP}:10000:10000
+#      - ${DNS_EXTERNAL_IP}:53:53/udp
+#    dns: 127.0.0.1
+#    environment:
+#      - ROOT_PASSWORD=SecretPassword
+#    volumes:
+#      - $PWD/dns-server/:/data
+#
+#  dns-proxy-server:
+#    container_name: dns-proxy-server
+#    hostname: dns-proxy-server
+#    image: defreitas/dns-proxy-server
+#    network_mode: bridge
+#    ports:
+#      - 5380:5380
+#    volumes:
+#      - $PWD/dns-proxy-server/conf:/app/conf
+##      - /etc/resolv.conf:/etc/resolv.conf
+#      - /var/run/docker.sock:/var/run/docker.sock
+#    restart: always
 
 #STABLE INFRASTRUCTURE
   portainer:
@@ -22,6 +39,7 @@ services:
       - 9090:9000
     restart: always
     volumes:
+      - $PWD/portainer/data:/data
       - /var/run/docker.sock:/var/run/docker.sock
 
 #STABLE DEVELOPMENT
@@ -29,10 +47,13 @@ services:
     container_name: nexus-server
     hostname: nexus-server
     image: sonatype/nexus3:${NEXUS_VERSION}
+    network_mode: bridge
     ports:
       - 8081:8081
       - 8082:8082
       - 8083:8083
+    volumes:
+      - $PWD/nexus/data:/nexus-data
     restart: always
 
   git-server:
@@ -41,10 +62,12 @@ services:
     image: gitea/gitea:${GIT_VERSION}
     privileged: true
     ports:
-      - 1022:22
-      - 3000:3000
+      - 1022:1022
+      - 3300:3300 #stagemonitor is using the port 3000 as well
+      - 3000:3000 #stagemonitor is using the port 3000 as well
     volumes:
       - $PWD/gitea/data:/data
+      - $PWD/gitea/app.ini:/data/gitea/conf/app.ini
     restart: always
 
 #TDD - CI with Drone
@@ -64,14 +87,14 @@ services:
       - git-server
     environment:
       - DRONE_DEBUG=true
-      - DRONE_HOST=http://drone-server:8000
-#      - DRONE_HOST=http://${DRONE_DOCKER_EXTERNAL_IP}:8000
+#      - DRONE_HOST=http://drone-server.home:8000
+      - DRONE_HOST=http://${DRONE_DOCKER_EXTERNAL_IP}:8000
       - DRONE_OPEN=true
       - DRONE_SECRET=ok
       - DRONE_PLUGIN_PULL=true
       - DRONE_GOGS=true
-#      - DRONE_GOGS_URL=http://git-server:3000
-      - DRONE_GOGS_URL=http://${GIT_DOCKER_EXTERNAL_IP}:3000
+#      - DRONE_GOGS_URL=http://git-server.home:3300
+      - DRONE_GOGS_URL=http://${GIT_DOCKER_EXTERNAL_IP}:3300
       - DRONE_GOGS_PRIVATE_MODE=true
       - DRONE_GOGS_SKIP_VERIFY=false
 
@@ -87,7 +110,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - DRONE_SERVER=drone-server:9000
+      - DRONE_SERVER=drone-server.home:9000
 #      - DRONE_SERVER=http://${DRONE_DOCKER_EXTERNAL_IP}:9000
       - DRONE_SECRET=ok
 
@@ -123,18 +146,18 @@ services:
 #      - DRONE_SERVER=http://${DRONE_DOCKER_EXTERNAL_IP}:9000
       - DRONE_SECRET=ok
 
-  drone-cli:
-    container_name: drone-cli
-    hostname: drone-cli
-    build: droneio-cli
-    restart: always
-    depends_on:
-      - drone-server
-    environment:
-      - DRONE_SERVER=http://drone-server:8000
-      - DRONE_TOKEN=${DRONE_DOCKER_SEC_TOKEN}
-    stdin_open: true
-    tty: true
+#  drone-cli:
+#    container_name: drone-cli
+#    hostname: drone-cli
+#    build: droneio-cli
+#    restart: always
+#    depends_on:
+#      - drone-server
+#    environment:
+#      - DRONE_SERVER=http://drone-server:8000
+#      - DRONE_TOKEN=${DRONE_DOCKER_SEC_TOKEN}
+#    stdin_open: true
+#    tty: true
 
 
 
