removed obsolete port from gitea

--- a/development/gitea/app.ini
+++ b/development/gitea/app.ini
@@ -10,12 +10,12 @@ TEMP_PATH = /data/gitea/uploads
 
 [server]
 APP_DATA_PATH    = /data/gitea
-SSH_DOMAIN       = 192.168.0.100
+SSH_DOMAIN       = git-server
 HTTP_PORT        = 3300
-ROOT_URL         = http://192.168.0.100:3300/
+ROOT_URL         = http://git-server:3300/
 DISABLE_SSH      = false
 SSH_PORT         = 1022
-DOMAIN           = 192.168.0.100
+DOMAIN           = git-server
 LFS_START_SERVER = true
 LFS_CONTENT_PATH = /data/gitea/lfs
 LFS_JWT_SECRET   = 5qMh-oasI0KAMlxuDLTm2xnEB39ug3oA16LFLyGCSm0
