--- a/development/.env
+++ b/development/.env
@@ -7,16 +7,13 @@ NEXUS_VERSION=latest
 DNS_EXTERNAL_IP=192.168.0.10
 
 GIT_VERSION=latest
-#GIT_DOCKER_EXTERNAL_IP=git-server.home
-GIT_DOCKER_EXTERNAL_IP=192.168.0.100
-#
+GIT_DOCKER_EXTERNAL_IP=git-server.home
+#GIT_DOCKER_EXTERNAL_IP=192.168.0.100
 SELENOID_DOCKER_EXTERNAL_IP=selenoid-server.home
-#SELENOID_DOCKER_EXTERNAL_IP=192.168.0.100
 
 #DRONE_VERSION=0.8.2
 DRONE_VERSION=alpine
-#DRONE_DOCKER_EXTERNAL_IP=drone-server.home
-DRONE_DOCKER_EXTERNAL_IP=192.168.0.100
+DRONE_DOCKER_EXTERNAL_IP=drone-server.home
 #DRONE_DOCKER_SEC_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0ZXh0Ijoic3ZlbiIsInR5cGUiOiJ1c2VyIn0.0QrqMGqSCWgpeLDLMDuem8cK1hUNwFlORqaCjpfi79Q
 
 
