--- a/development/gitea/app.ini
+++ b/development/gitea/app.ini
@@ -12,7 +12,7 @@ TEMP_PATH = /data/gitea/uploads
 APP_DATA_PATH    = /data/gitea
 SSH_DOMAIN       = git-server
 HTTP_PORT        = 3300
-ROOT_URL         = http://git-server:3300/
+ROOT_URL         = http://git.rapidpm.org:3300/
 DISABLE_SSH      = false
 SSH_PORT         = 1022
 DOMAIN           = git-server
