--- a/development/.env
+++ b/development/.env
@@ -4,17 +4,18 @@ DOCKER_API_VERSION=1.35
 
 NEXUS_VERSION=latest
 
-DNS_EXTERNAL_IP=192.168.0.10
+#DNS_EXTERNAL_IP=192.168.0.10
+DNS_EXTERNAL_IP=8.8.8.8
 
 GIT_VERSION=latest
-GIT_DOCKER_EXTERNAL_IP=git-server.home
+GIT_DOCKER_EXTERNAL_IP=git.rapidpm.org
 #GIT_DOCKER_EXTERNAL_IP=192.168.0.100
-SELENOID_DOCKER_EXTERNAL_IP=selenoid-server.home
+SELENOID_DOCKER_EXTERNAL_IP=selenoid.rapidpm.org
 
 #DRONE_VERSION=0.8.2
 DRONE_VERSION=alpine
-DRONE_DOCKER_EXTERNAL_IP=drone-server.home
-#DRONE_DOCKER_SEC_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0ZXh0Ijoic3ZlbiIsInR5cGUiOiJ1c2VyIn0.0QrqMGqSCWgpeLDLMDuem8cK1hUNwFlORqaCjpfi79Q
+DRONE_DOCKER_EXTERNAL_IP=drone.rapidpm.org
+#DRONE_DOCKER_SEC_TOKEN=
 
 
 #SELENOID_VER=latest-release
