--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -144,6 +144,85 @@ services:
     environment:
 #      - DRONE_SERVER=drone-server:9000
       - DRONE_SERVER=${DRONE_DOCKER_EXTERNAL_IP}:9000
+
+  drone-agent-04:
+    container_name: drone-agent-04
+    hostname: drone-agent-04
+    image: drone/agent:${DRONE_VERSION}
+    privileged: true
+    command: agent
+    restart: always
+    depends_on:
+      - drone-server
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+#      - DRONE_SERVER=drone-server:9000
+      - DRONE_SERVER=${DRONE_DOCKER_EXTERNAL_IP}:9000
+      - DRONE_SECRET=ok
+
+  drone-agent-05:
+    container_name: drone-agent-05
+    hostname: drone-agent-05
+    image: drone/agent:${DRONE_VERSION}
+    privileged: true
+    command: agent
+    restart: always
+    depends_on:
+      - drone-server
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+#      - DRONE_SERVER=drone-server:9000
+      - DRONE_SERVER=${DRONE_DOCKER_EXTERNAL_IP}:9000
+      - DRONE_SECRET=ok
+
+  drone-agent-06:
+    container_name: drone-agent-06
+    hostname: drone-agent-06
+    image: drone/agent:${DRONE_VERSION}
+    privileged: true
+    command: agent
+    restart: always
+    depends_on:
+      - drone-server
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+#      - DRONE_SERVER=drone-server:9000
+      - DRONE_SERVER=${DRONE_DOCKER_EXTERNAL_IP}:9000
+      - DRONE_SECRET=ok
+
+  drone-agent-07:
+    container_name: drone-agent-07
+    hostname: drone-agent-07
+    image: drone/agent:${DRONE_VERSION}
+    privileged: true
+    command: agent
+    restart: always
+    depends_on:
+      - drone-server
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+#      - DRONE_SERVER=drone-server:9000
+      - DRONE_SERVER=${DRONE_DOCKER_EXTERNAL_IP}:9000
+      - DRONE_SECRET=ok
+
+  drone-agent-08:
+    container_name: drone-agent-08
+    hostname: drone-agent-08
+    image: drone/agent:${DRONE_VERSION}
+    privileged: true
+    command: agent
+    restart: always
+    depends_on:
+      - drone-server
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+#      - DRONE_SERVER=drone-server:9000
+      - DRONE_SERVER=${DRONE_DOCKER_EXTERNAL_IP}:9000
       - DRONE_SECRET=ok
 
 
