--- a/images/maven-3.5-jdk-ibm-08/Dockerfile
+++ b/images/maven-3.5-jdk-ibm-08/Dockerfile
@@ -6,7 +6,7 @@ ARG USER_HOME_DIR="/root"
 ARG BASE_URL=http://www-eu.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
 
 RUN curl -sL https://github.com/shyiko/jabba/raw/master/install.sh | \
-    JABBA_COMMAND="install 1.9.0-4 -o /jdk" bash
+    JABBA_COMMAND="install ibm@1.8.0-5.7 -o /jdk" bash
 
 ENV JAVA_HOME /jdk
 ENV PATH $JAVA_HOME/bin:$PATH
