--- a/images/maven-3.5-jdk-10/Dockerfile
+++ b/images/maven-3.5-jdk-10/Dockerfile
@@ -1,57 +1,14 @@
-FROM buildpack-deps:buster-curl
+FROM svenruppert/maven-3.5-no-jdk:maven-3.5.3
 MAINTAINER sven.ruppert@gmail.com
 
-ARG MAVEN_VERSION=3.5.3
 ARG USER_HOME_DIR="/root"
-ARG BASE_URL=http://www-eu.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
 
 RUN curl -sL https://github.com/shyiko/jabba/raw/master/install.sh | \
-    JABBA_COMMAND="install 1.10.0-45 -o /jdk" bash
+#    JABBA_COMMAND="install adopt@1.10.0-46 -o /jdk" bash
+    JABBA_COMMAND="install adopt@1.10.0-GA=tgz+https://download.java.net/java/GA/jdk10/10/binaries/openjdk-10_linux-x64_bin.tar.gz -o /jdk" bash
 
 ENV JAVA_HOME /jdk
 ENV PATH $JAVA_HOME/bin:$PATH
 
-RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
-  && curl -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-  && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
-  && rm -f /tmp/apache-maven.tar.gz \
-  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-
-ENV MAVEN_HOME /usr/share/maven
-ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
-
-COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
-COPY settings-docker.xml /usr/share/maven/ref/
-
 ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
-
-
-#FROM openjdk:10-jdk
-#MAINTAINER sven.ruppert@gmail.com
-#
-#ARG MAVEN_VERSION=3.5.2
-#ARG USER_HOME_DIR="/root"
-#ARG SHA=707b1f6e390a65bde4af4cdaf2a24d45fc19a6ded00fff02e91626e3e42ceaff
-#ARG BASE_URL=https://apache.osuosl.org/maven/maven-3/${MAVEN_VERSION}/binaries
-#
-## Maven fails with 'Can't read cryptographic policy directory: unlimited'
-## because it looks for $JAVA_HOME/conf/security/policy/unlimited but it is in
-## /etc/java-10-openjdk/security/policy/unlimited
-#RUN ln -s /etc/java-10-openjdk /usr/lib/jvm/java-10-openjdk-$(dpkg --print-architecture)/conf
-#
-#RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
-#  && curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-#  && echo "${SHA}  /tmp/apache-maven.tar.gz" | sha256sum -c - \
-#  && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
-#  && rm -f /tmp/apache-maven.tar.gz \
-#  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-#
-#ENV MAVEN_HOME /usr/share/maven
-#ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
-#
-#COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
-#COPY settings-docker.xml /usr/share/maven/ref/
-#
-#ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
-#CMD ["mvn"]
