added maven 3.5 open 1.11.0-5

--- a/images/maven-3.5-jdk-11/Dockerfile
+++ b/images/maven-3.5-jdk-11/Dockerfile
@@ -1,27 +1,14 @@
-FROM buildpack-deps:buster-curl
+FROM svenruppert/maven-3.5-no-jdk:maven-3.5.3
 MAINTAINER sven.ruppert@gmail.com
 
-ARG MAVEN_VERSION=3.5.3
 ARG USER_HOME_DIR="/root"
-ARG BASE_URL=http://www-eu.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
 
 RUN curl -sL https://github.com/shyiko/jabba/raw/master/install.sh | \
-    JABBA_COMMAND="install 1.11.0-3 -o /jdk" bash
+    JABBA_COMMAND="install 1.11.0-5 -o /jdk" bash
 
 ENV JAVA_HOME /jdk
 ENV PATH $JAVA_HOME/bin:$PATH
 
-RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
-  && curl -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
-  && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
-  && rm -f /tmp/apache-maven.tar.gz \
-  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
-
-ENV MAVEN_HOME /usr/share/maven
-ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
-
-COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
-COPY settings-docker.xml /usr/share/maven/ref/
-
 ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
+
