--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -254,7 +254,7 @@ services:
     privileged: true
     network_mode: bridge
     ports:
-      - 8080:8080
+      - 8888:8080  #port 8080 is used by FnProject
     restart: always
     depends_on:
       - selenoid-server
