--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -144,6 +144,7 @@ services:
     environment:
 #      - DRONE_SERVER=drone-server:9000
       - DRONE_SERVER=${DRONE_DOCKER_EXTERNAL_IP}:9000
+      - DRONE_SECRET=ok
 
   drone-agent-04:
     container_name: drone-agent-04
