renamed maven no jdk folder and added it to drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,20 @@ workspace:
 
 pipeline:
 
+  docker_maven-3.5-no-jdk:
+    image: plugins/docker
+    secrets: [ docker_username, docker_password ]
+    repo: svenruppert/maven-3.5-no-jdk
+    tags:
+      - latest
+      - 1.8.162-00
+    dockerfile: images/maven-3.5-no-jdk/Dockerfile
+    when:
+        branches:
+          include: master, develop, release/*
+          exclude: feature/*
+
+
   docker_maven-3.5-jdk-08:
     group: build
     image: plugins/docker
