renamed maven no jdk folder and added it to drone

--- a/images/maven-3.5-no-jdk/Dockerfile
+++ b/images/maven-3.5-no-jdk/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER sven.ruppert@gmail.com
 ARG MAVEN_VERSION=3.5.3
 ARG USER_HOME_DIR="/root"
 #ARG BASE_URL=http://www-eu.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
-ARG BASE_URL=http://apache.mirror.digionline.de/maven/maven/maven-3/${MAVEN_VERSION}/binaries
+ARG BASE_URL=http://http://www-eu.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries
 
 RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
   && curl -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
