removed maven-no-jdk build

--- a/images/maven-3.5-no-jdk/Dockerfile
+++ b/images/maven-3.5-no-jdk/Dockerfile
@@ -18,5 +18,5 @@ ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
 COPY settings-docker.xml /usr/share/maven/ref/
 
-ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
+#ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
