--- a/images/maven-3.5-jdk-08/Dockerfile
+++ b/images/maven-3.5-jdk-08/Dockerfile
@@ -11,8 +11,8 @@ ENV PATH $JAVA_HOME/bin:$PATH
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
-COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
-COPY settings-docker.xml /usr/share/maven/ref/
+#COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
+#COPY settings-docker.xml /usr/share/maven/ref/
 
-ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
+#ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
