--- a/images/maven-3.5-jdk-11/Dockerfile
+++ b/images/maven-3.5-jdk-11/Dockerfile
@@ -11,6 +11,10 @@ ENV PATH $JAVA_HOME/bin:$PATH
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
+RUN java -version
+RUN mvn -version
+
+
 ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
 
