--- a/images/maven-3.5-jdk-08/Dockerfile
+++ b/images/maven-3.5-jdk-08/Dockerfile
@@ -11,10 +11,8 @@ ENV PATH $JAVA_HOME/bin:$PATH
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
-RUN java -version
+RUN /jdk/java -version
 RUN mvn -version
-#COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
-#COPY settings-docker.xml /usr/share/maven/ref/
 
 #ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
