--- a/images/maven-3.5-no-jdk/Dockerfile
+++ b/images/maven-3.5-no-jdk/Dockerfile
@@ -15,10 +15,10 @@ RUN mkdir -p /usr/share/maven /usr/share/maven/ref \
 ENV MAVEN_HOME /usr/share/maven
 ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
-RUN mvn -version
+#RUN mvn -version
 
-COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
-COPY settings-docker.xml /usr/share/maven/ref/
+#COPY mvn-entrypoint.sh /usr/local/bin/mvn-entrypoint.sh
+#COPY settings-docker.xml /usr/share/maven/ref/
 
-ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
+#ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
