--- a/images/maven-3.5-jdk-openjdk-11/Dockerfile
+++ b/images/maven-3.5-jdk-openjdk-11/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER sven.ruppert@gmail.com
 ARG USER_HOME_DIR="/root"
 
 RUN curl -sL https://github.com/shyiko/jabba/raw/master/install.sh | \
-    JABBA_COMMAND="install 1.11.0-12 -o /jdk" bash
+    JABBA_COMMAND="install openjdk@1.11.0-16 -o /jdk" bash
 
 ENV JAVA_HOME /jdk
 ENV PATH $JAVA_HOME/bin:$PATH
