--- a/images/maven-3.5-jdk-openjdk-shenandoah-08/Dockerfile
+++ b/images/maven-3.5-jdk-openjdk-shenandoah-08/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER sven.ruppert@gmail.com
 ARG USER_HOME_DIR="/root"
 
 RUN curl -sL https://github.com/shyiko/jabba/raw/master/install.sh | \
-    JABBA_COMMAND="install 1.11.0-16 -o /jdk" bash
+    JABBA_COMMAND="install openjdk-shenandoah@1.8.0-241 -o /jdk" bash
 
 ENV JAVA_HOME /jdk
 ENV PATH $JAVA_HOME/bin:$PATH
@@ -13,7 +13,6 @@ ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
 RUN java -version
 RUN mvn -version
-
 
 ENTRYPOINT ["/usr/local/bin/mvn-entrypoint.sh"]
 CMD ["mvn"]
