--- a/development/.env
+++ b/development/.env
@@ -8,8 +8,9 @@ NEXUS_VERSION=latest
 DNS_EXTERNAL_IP=8.8.8.8
 
 GIT_VERSION=latest
-GIT_DOCKER_EXTERNAL_IP=git.rapidpm.org
+#GIT_DOCKER_EXTERNAL_IP=git.rapidpm.org
 #GIT_DOCKER_EXTERNAL_IP=192.168.0.100
+SELENOID_DOCKER_EXTERNAL_IP=selenoid.rapidpm.org
 SELENOID_DOCKER_EXTERNAL_IP=selenoid.rapidpm.org
 
 #DRONE_VERSION=0.8.2
