added upsource / youtrack / minio / FnProject

--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -262,3 +262,70 @@ services:
     links:
       - selenoid-server
     command: [--selenoid-uri, "http://selenoid-server:4444"]
+
+
+  youtrack:
+      image: jetbrains/youtrack:2018.2.42133
+      container_name: youtrack
+      hostname: youtrack
+      ports:
+          - 7777:8080
+      restart: always
+      volumes:
+          - $PWD/youtrack/data:/opt/youtrack/data
+          - $PWD/youtrack/conf:/opt/youtrack/conf
+          - $PWD/youtrack/logs:/opt/youtrack/logs
+          - $PWD/youtrack/backups:/opt/youtrack/backups
+
+  upsource:
+      image: jetbrains/upsource:2018.1.357
+      container_name: upsource
+      hostname: upsource
+      ports:
+          - 7788:8080
+      restart: always
+      volumes:
+          - $PWD/upsource/data:/opt/upsource/data
+          - $PWD/upsource/conf:/opt/upsource/conf
+          - $PWD/upsource/logs:/opt/upsource/logs
+          - $PWD/upsource/backups:/opt/upsource/backups
+
+
+  minio:
+    image: minio/minio
+    container_name: minio
+    hostname: minio
+    ports:
+      - "9091:9000"
+    environment:
+      - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
+      - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
+    volumes:
+      - $PWD/minio/data/:/data
+    command: server /data
+
+
+  fnserver:
+    image: fnproject/fnserver
+    container_name: fnserver
+    hostname: fnserver
+    restart: always
+    ports:
+      - "6666:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  fnserver-ui:
+    depends_on:
+      - fnserver
+    image: fnproject/ui
+    container_name: fnserver-ui
+    hostname: fnserver-ui
+    restart: always
+    ports:
+      - "6640:4000"
+    links:
+      - "fnserver"
+    environment:
+      - FN_API_URL=http://fnserver:8080
+
