--- a/development/.env
+++ b/development/.env
@@ -8,16 +8,23 @@ NEXUS_VERSION=latest
 DNS_EXTERNAL_IP=8.8.8.8
 
 GIT_VERSION=latest
-#GIT_DOCKER_EXTERNAL_IP=git.rapidpm.org
+GIT_DOCKER_EXTERNAL_IP=git.rapidpm.org
 #GIT_DOCKER_EXTERNAL_IP=192.168.0.100
 SELENOID_DOCKER_EXTERNAL_IP=selenoid.rapidpm.org
-SELENOID_DOCKER_EXTERNAL_IP=selenoid.rapidpm.org
+#SELENOID_DOCKER_EXTERNAL_IP=192.168.0.100
 
 #DRONE_VERSION=0.8.2
 DRONE_VERSION=alpine
 DRONE_DOCKER_EXTERNAL_IP=drone.rapidpm.org
+#DRONE_DOCKER_EXTERNAL_IP=192.168.0.100
 #DRONE_DOCKER_SEC_TOKEN=
 
 
 #SELENOID_VER=latest-release
 SELENOID_VER=1.4.3
+
+
+# YOU SHOULD CHANGE THIS IN PRODUCTION
+MINIO_ACCESS_KEY=admin
+MINIO_SECRET_KEY=passwd
+
