renamed openjdk images to jdk-openjdk-xx

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,19 +18,19 @@ pipeline:
 #          exclude: feature/*
 
 
-  docker_maven-3.5-jdk-08:
-    group: build
-    image: plugins/docker
-    secrets: [ docker_username, docker_password ]
-    repo: svenruppert/maven-3.5-jdk-08
-    tags:
-      - latest
-      - 1.8.162-00
-    dockerfile: images/maven-3.5-jdk-08/Dockerfile
-    when:
-        branches:
-          include: master, develop, release/*
-          exclude: feature/*
+#  docker_maven-3.5-jdk-08:
+#    group: build
+#    image: plugins/docker
+#    secrets: [ docker_username, docker_password ]
+#    repo: svenruppert/maven-3.5-jdk-08
+#    tags:
+#      - latest
+#      - 1.8.162-00
+#    dockerfile: images/maven-3.5-jdk-08/Dockerfile
+#    when:
+#        branches:
+#          include: master, develop, release/*
+#          exclude: feature/*
 
 #  docker_maven-3.5-jdk-09:
 #    group: build
