switch to develop

--- a/development/.env
+++ b/development/.env
@@ -21,10 +21,11 @@ DRONE_DOCKER_EXTERNAL_IP=drone.rapidpm.org
 
 
 #SELENOID_VER=latest-release
-SELENOID_VER=1.4.3
+#SELENOID_VER=1.4.3
+SELENOID_VER=1.6.1
 
 
 # YOU SHOULD CHANGE THIS IN PRODUCTION
-MINIO_ACCESS_KEY=admin
-MINIO_SECRET_KEY=passwd
+MINIO_USER_KEY=admin
+MINIO_PASSWD_KEY=passwd
 
