deactivated all services, start building virtual hosting

--- a/development/docker-compose.yml
+++ b/development/docker-compose.yml
@@ -30,10 +30,11 @@ services:
     network_mode: bridge
     ports:
       - 8081
-#      - 8082:8082
-#      - 8083:8083
+      - 8082
+      - 8083
     volumes:
       - $PWD/nexus/data:/nexus-data
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - VIRTUAL_HOST=nexus.rapidpm.org
 
